--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,8 @@ Global Styles
 }
 body {
   font-family: var(--ff-secondary);
-  /* background: var(--clr-grey-10); */
-  background: #f8d7da;
+  background: var(--clr-grey-10);
+  /* background: #f8d7da; */
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
